# sparsegpu

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  test_source.cuh
include/sparsegpu/: CMakeLists.txt  MatrixCSR.cuh  MatrixCSRDev.cuh  csr.h  dense.h
include/sparsegpu/add/: CMakeLists.txt  addCsr.cuh  addCsrDense.cuh
include/sparsegpu/conversions/: CMakeLists.txt  csrDevToDenseDev.cuh  csrToDense.cuh  denseDevToCsrDev.cuh  denseToCsr.cuh
include/sparsegpu/transfer/: CMakeLists.txt  CSRToDev.cuh  CSRToHost.cuh  denseToDev.cuh  denseToHost.cuh
include/sparsegpu/types/: CMakeLists.txt  MatrixCSR.cuh  MatrixCSRDev.cuh  MatrixDense.cuh  MatrixDenseDev.cuh
src/: CMakeLists.txt  test_source.cu
test/: CMakeLists.txt  smoke.cu
test/add/: CMakeLists.txt  csrAdd.cu
test/conversions/: CMakeLists.txt  csrToDense.cu  csrToDenseDev.cu
test/types/: CMakeLists.txt  MatrixCSRDevTest.cu  MatrixDenseTest.cu
